# SPL---Assignment1

./: CMakeLists.txt  README  config1.txt  config1_output.txt  config2.txt  config2_output.txt  config3.txt  config3_output.txt  makefile
include/: Card.h  Deck.h  Game.h  Hand.h  Player.h
src/: Card.cpp  Deck.cpp  Game.cpp  Hand.cpp  Player.cpp  reviiyot.cpp
